--- a/views/hola2.hbs
+++ b/views/hola2.hbs
@@ -1,2 +1,6 @@
 <h1>{{ texto }}</h1>
-<h1>Coopercillo er Tocinillo</h1>>
+<h2>Quién es el perro marrón? -> {{perro}}</h2>
+<h2>Quién es la perra blanca y negra? -> {{perro2}}</h2>
+<h2>Quién es el perro rubio? -> {{perro3}}</h2>
+<h2>Quién es la perra rubia? -> {{perro4}}</h2>
+<h2>Quién es La Deina? -> {{pajaro}}</h2>
