--- a/views/hola2.hbs
+++ b/views/hola2.hbs
@@ -4,3 +4,9 @@
 <h2>Quién es el perro rubio? -> {{perro3}}</h2>
 <h2>Quién es la perra rubia? -> {{perro4}}</h2>
 <h2>Quién es La Deina? -> {{pajaro}}</h2>
+
+<ol>
+{{#each listado}}
+<li>{{this.animal}}</li>
+{{/each}}
+</ol>
